--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 
 
 
-  <title>Hummingbird: A social platform for bloggers</title>
+  <title>UNIDB: University Database</title>
 </head>
 
 <body>
